# distdb

./: .gitignore  AUTHORS  COPYING  COPYING-TEMPLATE-FOR-SOURCE-FILE  INSTALL  Makefile.am  NEWS  README  README.zh_CN  autogen.sh  configure.ac  distdb.conf.in  nodes.db.in  流程图.dia  系统设计.txt  项目设计.txt
bindings/: Makefile.am
bindings/java/: Makefile.am  distdb.java
db/: Makefile.am  sqlite.c
doc/: Doxyfile.in  Makefile.am  实现原理  实现原理.tex
include/: Makefile.am  communication.h  db_def.h  distdb.h  global_var.h  inifile.h  list.h  nodes.h  rpc.h
init/: Makefile.am  gennodes.c  inifile.c  inifile.h  main.c  prase.c  prase.h
lib/: Makefile.am  client.c  java.c  makefile.vc  vcbuild.cmd  vcconfig.h  version.c
src/: Makefile.am  client.c  database.c  distdb.c  easyinet.c  global_var.c  masterloop.c  nodes_op.c  rpc_op.c  version.c
